# fcitx-skk

./: .gitignore  CMakeLists.txt  README.md
gui/: CMakeLists.txt  addkeyworddialog.cpp  addkeyworddialog.h  addkeyworddialog.ui  autostarthenkankeywordsmodel.cpp  autostarthenkankeywordsmodel.h  autostarthenkankeywordswidget.cpp  autostarthenkankeywordswidget.h  autostarthenkankeywordswidget.ui  dictmodel.cpp  main.cpp
po/: fcitx-skk.pot  ja.po
src/: CMakeLists.txt  auto_start_henkan_keywords.in  fcitx-skk.conf.in  fcitx-skk.desc  skk.c  skk.h
